--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://unpkg.com/bootstrap@5.0/dist/css/bootstrap.min.css');
+
+.btn:focus {
+  outline: none !important;
+}
